# agent-pipeline

./: .gitignore  README.md  orchestrator.py  run.sh  tasks.json
agent_team/: builder.py  critic.py  fixer.py  logger.py  planner.py
completed/01_arXiv_논문_요약_에이전트/: .gitignore  README.md  config.yaml  main.py  requirements.txt
completed/01_arXiv_논문_요약_에이전트/src/: fetcher.py  logger.py  summarizer.py  writer.py
completed/02_GitHub_트렌딩_분석_에이전트/: .env.example  .gitignore  README.md  config.yaml  main.py  requirements.txt
completed/02_GitHub_트렌딩_분석_에이전트/analyzer/: claude_analyzer.py
completed/02_GitHub_트렌딩_분석_에이전트/reporter/: report_generator.py
completed/02_GitHub_트렌딩_분석_에이전트/scraper/: __init__.py  github_scraper.py
completed/02_GitHub_트렌딩_분석_에이전트/storage/: __init__.py  data_store.py
completed/02_GitHub_트렌딩_분석_에이전트/utils/: __init__.py  config.py  logger.py
completed/03_AI_뉴스_수집_+_인사이트_에이전트/: .gitignore  README.md  config.yaml  main.py  pyproject.toml  requirements.txt
completed/03_AI_뉴스_수집_+_인사이트_에이전트/src/: analyzer.py  collector.py  processor.py  reporter.py  state.py
completed/04_지원서_평가_에이전트_(루브릭_기반_설명_가능_평가)/: .gitignore  README.md  main.py  requirements.txt
completed/04_지원서_평가_에이전트_(루브릭_기반_설명_가능_평가)/examples/: EXAMPLE_FORMAT.md
completed/05_AI_기업_블로그_수집_에이전트/: .gitignore  README.md  config.yaml  main.py  requirements.txt
completed/06_Hugging_Face_트렌딩_수집_에이전트/: .env.example  .gitignore  README.md  config.yaml  main.py  requirements.txt
completed/07_한국_AI_정책_모니터_에이전트/: .gitignore  README.md  config.yaml  install.sh  main.py  requirements.txt
(+13 files in other folders)
